Progress: Vendor text-wrap issue

--- a/app/styles/app-internal.scss
+++ b/app/styles/app-internal.scss
@@ -400,6 +400,15 @@ body {
 	h2{
 		color: #272727;
 		display: inline-block;
+
+		margin-top: 5px;
+		margin-left: 5px;
+		margin-right: 5px;
+		overflow: hidden;
+  		text-overflow: ellipsis;
+  		white-space: nowrap;
+  		// color: white;
+  		text-align: center;
 	}
 }
 
